
test 55 failed once with avahi (connection refused exception)

---------------------------------
In this files, you will find changes between java OMiSCID versions.

1.
r
        fix:  TODO doc fix problem with missing description requiring updateDescription
        fix:  bad handling of absent udp port or missing peers in received remote service description

//1.6.0
//r6250
        fix:  problem with ServiceProxy#getVariableType() returning null for a remote non-Java service
        fix:  (API) Service#getVariableAccessType now returns VariableAccessType instead of string
        impr: dnssd server/proxy now fully operational (useful on networks where multicast is filtered)
        impr: (internal) added a class to expose some internal details used for instance in the GUI

1.5.1
r6108
        fix:  race conditions causing deadlock on connection
        fix:  race conditions preventing notifications of service connections
        fix:  race conditions causing an absence of response from introspection (e.g. for the service interconnection view in the GUI)
        fix:  (jivedns/jmdns) problem with multiple service search (only the first search worked in some cases)
        fix:  (jivedns/jmdns) duplicate addition of services in some cases
        fix:  (mdns) duplicate addition of services in some cases
        fix:  (avahi) duplicate addition of services on some networks causing ghosts and NPE at fr.prima.omiscid.dnssd.common.SharedBrowser.serviceEventReceived(SharedBrowser.java:100)
        impr: clearer reporting when verbose mode is on for dnssd factory
        impr: whether dnssd factory is a shared one can now be set programatically

1.5.0
r4950
        fix:  trying to send message (or reply message) through a input connector now properly throws an exception
        fix:  service disappearances were properly notified but browsing with a new service repository caused disappeared services to be reported as present