@@ -42,6 +42,7 @@ In this files, you will find changes between java OMiSCID versions.
 r
         fix:  TODO doc fix problem with missing description requiring updateDescription
         fix:  bad handling of absent udp port or missing peers in received remote service description
+        impr: added higher verbosity for the automatic selection DNSSD implementation (by setting environment variable to DEBUG)
 
 //1.6.0
 //r6250
